...
    
    lazy var btnGroup: UIButton = {
        let btn = UIButton()
        btn.addTarget(self, action: #selector(self.tappedBtnGroup(btn:)), for: .touchUpInside)
        btn.setImage(#imageLiteral(resourceName: "tabbar_group_off"), for: .normal)
        btn.setImage(#imageLiteral(resourceName: "tabbar_group_on"), for: .selected)
        btn.accessibilityIdentifier = "btnGroupBar"
        
        return btn
    }()
    
    lazy var btnCenter: UIButton = {
        let btn = UIButton()
        btn.addTarget(self, action: #selector(self.tappedBtnCenter(btn:)), for: .touchUpInside)
        let image = UIView.filledImage(from: #imageLiteral(resourceName: "icon_center"), with: Theme.shared.color_Dark_App())
        btn.setImage(image, for: .normal)
        btn.setImage(image, for: .highlighted)
        btn.accessibilityIdentifier = "btnCenterBar"
        
        return btn
    }()
    
    lazy var btnNotification: UIButton = {
        let btn = UIButton()
        btn.addTarget(self, action: #selector(self.tappedBtnNotification(btn:)), for: .touchUpInside)
        btn.setImage(#imageLiteral(resourceName: "tabbar_notification_off"), for: .normal)
        btn.setImage(#imageLiteral(resourceName: "tabbar_notification_on"), for: .selected)
        btn.accessibilityIdentifier = "btnNotificationBar"
        
        return btn
    }()
    
    lazy var btnSetting: UIButton = {
        let btn = UIButton()
        btn.addTarget(self, action: #selector(self.tappedBtnSetting(btn:)), for: .touchUpInside)
        btn.setImage(#imageLiteral(resourceName: "tabbar_more_off"), for: .normal)
        btn.setImage(#imageLiteral(resourceName: "tabbar_more_on"), for: .selected)
        btn.accessibilityIdentifier = "btnSettingBar"
        
        return btn
    }()
    
    //MARK:- Sub button from center button
    lazy var viewBlueBackground: UIView = {
...
    lazy var btnMap: UIButton = {
        let btn = UIButton()
        btn.addTarget(self, action: #selector(self.tappedBtnMap(btn:)), for: .touchUpInside)
        let image = UIView.filledImage(from: #imageLiteral(resourceName: "icon_text"), with: Theme.shared.color_Dark_App())
        btn.setImage(image, for: .normal)
        btn.setImage(image, for: .highlighted)
        btn.accessibilityIdentifier = "btnMapBar"
        
        return btn
    }()
    
    lazy var btnMusic: UIButton = {
        let btn = UIButton()
        btn.addTarget(self, action: #selector(self.tappedBtnMusic(btn:)), for: .touchUpInside)
        let image = UIView.filledImage(from: #imageLiteral(resourceName: "icon_text"), with: Theme.shared.color_Dark_App())
        btn.setImage(image, for: .normal)
        btn.setImage(image, for: .highlighted)
        btn.accessibilityIdentifier = "btnMusicBar"
        
        return btn
    }()
    
    lazy var btnMovie: UIButton = {
        let btn = UIButton()
        btn.addTarget(self, action: #selector(self.tappedBtnMovie(btn:)), for: .touchUpInside)
        let image = UIView.filledImage(from: #imageLiteral(resourceName: "icon_text"), with: Theme.shared.color_Dark_App())
        btn.setImage(image, for: .normal)
        btn.setImage(image, for: .highlighted)
        btn.accessibilityIdentifier = "btnMovieBar"
        
        return btn
    }()
    
    lazy var btnCheckOut: UIButton = {
        let btn = UIButton()
...
