...
        
        vc.navigationController?.navigationBar.tintColor = textColor
        vc.navigationController?.navigationBar.titleTextAttributes = textAttributes
        
        //Left
        if leftImg != nil && leftSelector != nil {
            let leftBar = UIBarButtonItem(image: leftImg, style: .plain, target: vc, action: leftSelector)
            leftBar.accessibilityLabel = "leftBar"
            
            vc.navigationItem.leftBarButtonItem = leftBar
        } else if leftText != nil && leftSelector != nil {
            let leftBar = UIBarButtonItem(title: leftText, style: .plain, target: vc, action: leftSelector)
            leftBar.accessibilityLabel = "leftBar"
...
