...

let GENERAL_CHANNEL_KEY = "-KJn8UTbJq2yWEnqum3K"

public let kScreenWidth = UIScreen.main.bounds.width
public let kScreenHeight = UIScreen.main.bounds.height

public let kUserInfo = "kUserInfo"
public let kAllowLocation = "kAllowLocation"
public let kCopyMusicToDocument = "kCopyMusicToDocument"
public let kLastVersion = "kLastVersion"
public let kShowAdMod = "kShowAdMod"
public let TYPE_PUSH_CHAT = "PushChat"
public let NUM_LIMIT: UInt = 25
...
