...
                                                <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="rSQ-75-23R">
                                                    <rect key="frame" x="53" y="53" width="269" height="31"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="sldTime"/>
                                                    <color key="minimumTrackTintColor" red="0.97254901959999995" green="0.90980392160000001" blue="0.10980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <color key="maximumTrackTintColor" red="1" green="1" blue="1" alpha="0.69999999999999996" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jI6-Km-ZyX">
                                                            <rect key="frame" x="98" y="0.0" width="60" height="60"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="btnPlay"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="60" id="EvM-U1-K1O"/>
...
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TVm-zi-DeU">
                                        <rect key="frame" x="50" y="16" width="270" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="tfUsername"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="3CE-eY-EIY"/>
...
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7ao-F9-QPj">
                                        <rect key="frame" x="50" y="16" width="270" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="tfPassword"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="s8v-UF-rbH"/>
...
                            <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hzu-zF-51S">
                                <rect key="frame" x="20" y="559" width="335" height="56"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnLogin"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="56" id="hip-2q-v1Z"/>
...
                                                    <rect key="frame" x="30" y="682" width="240" height="50"/>
                                                    <color key="backgroundColor" red="0.87637555599999994" green="0.2078308016" blue="0.13616921009999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="btnLogout"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="50" id="wp1-vS-h49"/>
...
